app-deploy/ingress-public.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-hub
  annotations:
    kubernetes.io/ingress.class: 'ingress-nginx'
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
  - host: nginx-hub.tajawal.io
    http:
      paths:
      - backend:
          serviceName: nginx-hub
          servicePort: 80
